<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SFCPDAActivity!</string>
    <string name="app_name">SFC-DG</string>
    <string name="back">返回</string> 
    <string name="more">更多</string> 
    <string name="confirm">确认</string> 
    <string name="changeContainer">换箱</string> 
    <string name="transfer">转移</string> 
    <string name="offline_picking">离线配货</string> 
    <string name="singleTosingle">一票一件</string>
    <string name="singleTomore">一票多件</string>
    <string name="shelve_location_num">货位编号:</string>
    <string name="sku">客户产品号:</string>
    <string name="qyt">产品数量:</string>
    <string name="miss_goods">少货</string>
    <string name="product_name">产品名称:</string> 
    <string name="image_info">图片信息:</string>
</resources>