<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ffffff"
    android:orientation="vertical">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/title" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_back"
                android:focusable="false"
                android:text="@string/back"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_pressed"
                android:focusable="false"
                android:text="@string/more"
                android:textColor="#ffffff"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/offline_picking"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    >
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/singleTosingle"
		        android:gravity="center"
		        android:textColor="#000000"
		        android:background="@drawable/et_background"
		        android:textSize="20sp"/>
		     
		     <TextView 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/singleTomore"
		        android:gravity="center"
		        android:textColor="#000000"
		        android:background="@drawable/et_background"
		        android:textSize="20sp"/>
		</LinearLayout>
		
        <ListView
            android:id="@+id/lv_under_shelves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            >
        </ListView>
      </LinearLayout>
      <ImageView
        android:id="@+id/imgRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/refresh_screen"
        android:visibility="invisible" />  
      <include layout="@layout/sfc_pro" /> 
</FrameLayout>
