<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/title" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_back"
                android:focusable="false"
                android:text="@string/back"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_pressed"
                android:focusable="false"
                android:text="@string/more"
                android:textColor="#ffffff"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="库存调拨"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView 
        android:id="@+id/last_shelve_locstock"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="SY-3FC-A1A2"
        android:gravity="center"
        android:background="@drawable/et_background"
        android:textSize="14sp"
        android:textColor="#ff0000"/>
      <TextView 
        android:id="@+id/last_sku_stock"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="STK0115010356"
         android:gravity="center"
         android:background="@drawable/et_background"
        android:textSize="14sp"
        android:textColor="#ff0000"/>
        <TextView 
        android:id="@+id/last_goods_qyt_stock"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="2"
         android:gravity="center"
         android:background="@drawable/et_background"
        android:textSize="14sp"
        android:textColor="#ff0000"/>
</LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/lineTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/et_background"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/shelve_location_num"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_Shelf_loc_Num_stock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                             android:gravity="center"
                            android:textColor="#555555"
                            android:textSize="20sp" >
                        </TextView>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/sku"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_pro_sku_stock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                             android:gravity="center"
                            android:textColor="#555555"
                            android:textSize="20sp" >
                        </TextView>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/qyt"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/et_ProCount_stock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#0000"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:textColor="#555555"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_AddCheck_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_common_radius"
                            android:padding="5dp"
                            android:layout_marginRight="5dp"
                            android:text="数量异常"
                            android:focusable="false"
                            android:textColor="#0486c1" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingTop="5dp"
                                android:text="@string/image_info"
                                android:textColor="#000000"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingTop="10dp"
                                android:text="(点击图片进行缩放、移动)"
                                android:textColor="#555555"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/iv_imgInfo_stock"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/img_load" >
                        </ImageView>
                    </LinearLayout>
                </LinearLayout>
				<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >
                    <EditText
		                android:id="@+id/et_scan_stock"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:background="@drawable/login"
		                android:hint="请扫描转移箱号"
		                android:imeOptions="actionDone"
		                android:padding="10dp"
		                android:singleLine="true"
		                android:textSize="15sp" >
                    <requestFocus />
					</EditText>
                  
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lineBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                     android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                   <Button
                        android:id="@+id/btn_Done_stransfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_common_radius"
                        android:padding="10dp"
                        android:text="@string/transfer"
                        android:textColor="#0486c1"
                          />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/refresh_screen"
        android:visibility="invisible" />

    <include layout="@layout/sfc_pro" />

</FrameLayout>
